# goro-rs

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  ROADMAP.md  TEST2  auto_detect_line_endings_2.txt  bug69181.csv  bug70198_svr_64f676fa9ac3ab95b05afe93663e1700.php  csv_control_data_basic.csv  csv_control_data_variation001.csv  expectf_match.py  process_proc_open_bug51800_right2.php  run_tests.sh  run_tests_v2.sh  show_failures.sh  test69900.php
.claude/projects/-home-magicaltux-projects-goro-rs/memory/: MEMORY.md  project_goro_rs.md
.github/workflows/: test.yml
crates/goro-core/: Cargo.toml
crates/goro-core/src/: array.rs  compiler.rs  fiber.rs  function.rs  generator.rs  lib.rs  object.rs  opcode.rs  reflection.rs  string.rs  uri.rs  value.rs  vm.rs
crates/goro-ext-bz2/: Cargo.toml
crates/goro-ext-bz2/src/: compress.rs  decompress.rs  lib.rs
crates/goro-ext-ctype/: Cargo.toml
crates/goro-ext-ctype/src/: lib.rs
crates/goro-ext-curl/: Cargo.toml
crates/goro-ext-curl/src/: handle.rs  lib.rs
crates/goro-ext-date/: Cargo.toml
crates/goro-ext-date/src/: lib.rs
crates/goro-ext-gmp/: Cargo.toml
crates/goro-ext-gmp/src/: bigint.rs  lib.rs
crates/goro-ext-hash/: Cargo.toml
crates/goro-ext-hash/src/: lib.rs
crates/goro-ext-json/: Cargo.toml
crates/goro-ext-json/src/: lib.rs
crates/goro-ext-mbstring/: Cargo.toml
crates/goro-ext-mbstring/src/: lib.rs
crates/goro-ext-mysqli/: Cargo.toml
crates/goro-ext-mysqli/src/: lib.rs
crates/goro-ext-openssl/: Cargo.toml
crates/goro-ext-openssl/src/: aes.rs  lib.rs  modes.rs
crates/goro-ext-reflection/: Cargo.toml
crates/goro-ext-reflection/src/: lib.rs
crates/goro-ext-session/: Cargo.toml
crates/goro-ext-session/src/: lib.rs
crates/goro-ext-sockets/: Cargo.toml
crates/goro-ext-sockets/src/: lib.rs
crates/goro-ext-spl/: Cargo.toml
crates/goro-ext-spl/src/: lib.rs
crates/goro-ext-standard/: Cargo.toml
crates/goro-ext-standard/src/: lib.rs  math.rs  misc.rs  output.rs  regex.rs  strings.rs  type_funcs.rs
crates/goro-ext-xml/: Cargo.toml
crates/goro-ext-xml/src/: lib.rs
crates/goro-ext-zlib/: Cargo.toml
crates/goro-ext-zlib/src/: deflate.rs  inflate.rs  lib.rs
crates/goro-parser/: Cargo.toml
crates/goro-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/goro-phpt/: Cargo.toml
crates/goro-phpt/src/: lib.rs
crates/goro-sapi/: Cargo.toml
crates/goro-sapi/src/: cli.rs  lib.rs
crates/goro-vfs/: Cargo.toml
crates/goro-vfs/src/: lib.rs
src/: main.rs
tools/: show_failures.sh
