[workspace]
members = [
    "crates/goro-core",
    "crates/goro-parser",
    "crates/goro-vfs",
    "crates/goro-sapi",
    "crates/goro-ext-standard",
    "crates/goro-ext-date",
    "crates/goro-ext-json",
    "crates/goro-ext-ctype",
    "crates/goro-ext-hash",
    "crates/goro-ext-openssl",
    "crates/goro-ext-zlib",
    "crates/goro-ext-gmp",
    "crates/goro-ext-bz2",
    "crates/goro-ext-curl",
    "crates/goro-ext-mysqli",
    "crates/goro-ext-session",
    "crates/goro-ext-sockets",
    "crates/goro-ext-mbstring",
    "crates/goro-phpt",
    "crates/goro-ext-xml",
    "crates/goro-ext-spl",
    "crates/goro-ext-reflection",
]
resolver = "2"

[package]
name = "goro"
version = "0.1.0"
edition = "2024"
description = "A PHP 8.5 implementation in Rust"
license = "MIT"

[dependencies]
goro-core = { path = "crates/goro-core" }
libc = "0.2"
goro-parser = { path = "crates/goro-parser" }
goro-vfs = { path = "crates/goro-vfs" }
goro-sapi = { path = "crates/goro-sapi" }
goro-ext-standard = { path = "crates/goro-ext-standard" }
goro-ext-date = { path = "crates/goro-ext-date" }
goro-ext-json = { path = "crates/goro-ext-json" }
goro-ext-ctype = { path = "crates/goro-ext-ctype" }
goro-ext-hash = { path = "crates/goro-ext-hash" }
goro-ext-openssl = { path = "crates/goro-ext-openssl" }
goro-ext-zlib = { path = "crates/goro-ext-zlib" }
goro-ext-gmp = { path = "crates/goro-ext-gmp" }
goro-ext-bz2 = { path = "crates/goro-ext-bz2" }
goro-ext-curl = { path = "crates/goro-ext-curl" }
goro-ext-mysqli = { path = "crates/goro-ext-mysqli" }
goro-phpt = { path = "crates/goro-phpt" }
goro-ext-xml = { path = "crates/goro-ext-xml" }
goro-ext-session = { path = "crates/goro-ext-session" }
goro-ext-sockets = { path = "crates/goro-ext-sockets" }
goro-ext-mbstring = { path = "crates/goro-ext-mbstring" }
goro-ext-spl = { path = "crates/goro-ext-spl" }
goro-ext-reflection = { path = "crates/goro-ext-reflection" }

[features]
default = ["ext-standard"]
ext-standard = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
