[package]
name = "goro-ext-mysqli"
version = "0.1.0"
edition = "2024"
description = "PHP mysqli extension for goro-rs"

[dependencies]
goro-core = { path = "../goro-core" }
mysql_async = { version = "0.34", default-features = false, features = ["default-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
