[package]
name = "goro-phpt"
version = "0.1.0"
edition = "2024"
description = "PHPT test runner for goro-rs"

[dependencies]
goro-core = { path = "../goro-core" }
goro-parser = { path = "../goro-parser" }
goro-sapi = { path = "../goro-sapi" }
goro-vfs = { path = "../goro-vfs" }
goro-ext-standard = { path = "../goro-ext-standard" }
