[package]
name = "goro-phpt"
version = "0.1.0"
edition = "2024"
description = "PHPT test runner for goro-rs"

[dependencies]
goro-core = { path = "../goro-core" }
goro-parser = { path = "../goro-parser" }
goro-sapi = { path = "../goro-sapi" }
goro-vfs = { path = "../goro-vfs" }
goro-ext-standard = { path = "../goro-ext-standard" }
goro-ext-date = { path = "../goro-ext-date" }
goro-ext-json = { path = "../goro-ext-json" }
goro-ext-ctype = { path = "../goro-ext-ctype" }
goro-ext-hash = { path = "../goro-ext-hash" }
goro-ext-openssl = { path = "../goro-ext-openssl" }
goro-ext-zlib = { path = "../goro-ext-zlib" }
goro-ext-gmp = { path = "../goro-ext-gmp" }
goro-ext-bz2 = { path = "../goro-ext-bz2" }
goro-ext-curl = { path = "../goro-ext-curl" }
goro-ext-xml = { path = "../goro-ext-xml" }
goro-ext-session = { path = "../goro-ext-session" }
goro-ext-mysqli = { path = "../goro-ext-mysqli" }
goro-ext-sockets = { path = "../goro-ext-sockets" }
goro-ext-mbstring = { path = "../goro-ext-mbstring" }
libc = "0.2"
regex = "1"
